Se modificó la sección 'Sobre Mí'

--- a/index.html
+++ b/index.html
@@ -40,6 +40,21 @@
 			</ul>
 		</section>
 		<section>
+			<div class="profile_description">
+				<h2>SOBRE MÍ</h2>
+				<p>Profesora colombiana. Amante de los libros y la
+					música. Aparte de ser profesora, cantar es una de
+					mis pasiones.</p>
+				<p>Disfruto aprender nuevas cosas que nutran no solo
+					mis conocimientos sino también mis valores como
+					persona.</p>
+				<p>Amo los rostros de mis estudiantes cuando
+					aprenden algo nuevo y sienten orgullo por ello.</p>
+				<p>Creo fuertemente que el aprender idiomas nos abre
+					las puertas del mundo.</p>
+			</div>
+		</section>
+		<section>
 			<h2>EXPERIENCIA LABORAL</h2>
 			<ul class="skills">
 				<li>
@@ -80,13 +95,13 @@
 			<h2>FORMACIÓN</h2>
 			<ul>
 				<li>
-					<label>MOODLE:</label> 
+					<label>MOODLE:</label>
 					<p>Junio 2017 | Curso 'Teaching with Moodle'.
 					</p>
 				</li>
 				<li>
 					<label>UNIVERSIDAD DE LA SALLE
-					</label> 
+					</label>
 					<p>2014-2019 | Licenciatura en lengua castellana, inglés y
 						francés.</p>
 				</li>
